--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <h2>A primeira versão</h2>
 
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill&#128279</a>. Ele conta que abriu o <a href="https://inkscape.org/" target="_blank">Inkscape&#128279</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
                 <source media="(max-width:670px )" srcset="../imagens/dan-droids-pq.png">
@@ -38,7 +38,7 @@
 
             <h2>Surge um novo mascote</h2>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank">Irina Blok&#128279</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
                 <source media="(max-width:670px )" srcset="../imagens/irina-blok-pq.jpg">
@@ -75,7 +75,7 @@
                 </ul>
                 <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
     
-                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android History&#128279</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
              </aside>
             
 
@@ -83,7 +83,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/RaphaelDNascimento?tab=repositories" target="_blank">José Raphael de Oliveira Nascimento</a></p>
+        <p>Site criado por <a href="https://github.com/RaphaelDNascimento?tab=repositories" target="_blank">José Raphael de Oliveira Nascimento&#128279</a></p>
     </footer>
 </body>
 </html>
